--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,16 @@ body {
     font-family: roboto, sans-serif;
 }
 
+.container-wrapper {
+
+
+}
+
+.container-wrapper--red {
+    background-color: #f05f40;
+    color: white;
+}
+
 .alert-container .col-12 {
     padding-left: 0;
     padding-right: 0;
@@ -53,6 +63,22 @@ body {
 
 }
 
+/* Page Headers */
+
+.page-header {
+    margin-bottom: 0;
+    border-bottom: 0;
+    text-align: center;
+}
+
+.page-header h2 {
+    margin-top: 0; 
+}
+
+.quotes .page-header{
+    margin-bottom: 25px;
+}
+
 /* Block Dividers */
 .block-divider {
     width: 75px;
@@ -61,13 +87,29 @@ body {
     background-color: #444;
 }
 
-.block-divider-orange {
+.block-divider--orange {
     background-color: #f05f40;
 }
 
-.block-divider-short {
+.block-divider--white {
+    background-color: white;
+}
+
+
+.block-divider--short {
     width: 35px;
 }
+
+/* Content Containers */
+    
+.content-container {
+    padding-top: 75px;
+    padding-bottom: 75px;
+}
+
+
+
+
 
 /* Navbar */
 
@@ -143,4 +185,26 @@ body {
     background-color: #df4929;
     border-color: #df4929;
     color: white;
+}
+
+.feature {
+    text-align: center;
+    margin-bottom: 40px;
+
+}
+
+.feature i {
+    margin-bottom: 20px;
+    font-size: 45px;
+    line-height:45px;
+}
+
+.feature .btn {
+    background-color: white;
+    border-color: white;
+    border-radius: 15px;
+    min-width: 100px;
+    font-weight: bold;
+    margin-top: 10px;
+    color: #f05f40;
 }
